Development history / change log, please read from bottom up

Version 3.3.9 - xx yyy 2019
Generic changes/fixes
	* update measurement properties XML containing [] by mistake
	
Device specific changes/fixes

Version 3.3.8 - 04 Aug 2019
Generic changes/fixes
	* catch possible IndexOutOfBoundsException while updating cell voltage window
	* 32 bit Linux lack of updates and seams still better compatible with GTK-2, use export SWT_GTK3=0 force using GTK-2 libs
	* update XSD to version 37 to enable sensor selection for altitude/climb values
	* update History analysis to use auto sensor selection for altitude/climb values 
	
Device specific changes/fixes
	* HoTTAdapterD - update Vario/ESC filter to synchronize with HottAdapter2
	* HoTTAdapterD - enable suppressing of lab calculation by smoothing value Rx dbm
	* HoTTAdapter2/D - enable selection of altitude/climb values source sensor
	* HoTTAdapter2 - fix power calculation while importing *.log EAM
	* HoTTAdapter2 - fix missing ESC parsing while configuration channels selected
	* HoTTAdapter* - fix/enable again capability to analyze log files written in SD-Format with 64 byte blocks  
	* CellLog8S - fix cell voltage display, correct index
	* iCharger* - fix index temperature intern/extern for serial connected once only
	
	
Version 3.3.7 - 14 Apr 2019
Generic changes/fixes
	* make none active measurement visible while history exploring
	* fix wrong naming replacement direction_start
	* add a check while user tries to create OSD-file direct in object directory to prevent overwriting data file with file link
	* update XSD version to force device xml replacement due to xml changes for several devices
	* add DataExplorer.cmd script to Windows installation to be used while openJDK is installed and java.exe in PATH
	* add news URL while update check detected new version
	
Device specific changes/fixes
	* HoTTAdapter* - enable channel values in % configurable using device dialog